init file upload for product api
